# meshagent-openai

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
meshagent/openai/: __init__.py
meshagent/openai/agents/: __init__.py  single_shot.py
meshagent/openai/proxy/: __init__.py  proxy.py
meshagent/openai/tools/: __init__.py  completions_adapter.py  event_publisher.py  realtime_adapter.py  responses_adapter.py  schema.py  stt.py  stt_test.py  usage.py
tests/: completions_adapter_test.py  proxy_test.py  realtime_adapter_live_test.py  realtime_adapter_test.py  repro_computer_tool_selection.py  repro_responses_websocket_cancel_latency.py  responses_adapter_live_test.py  responses_adapter_test.py  stt_test.py
