[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshagent-openai"
description = "OpenAI Building Blocks for Meshagent"
dynamic = ["version", "readme"]
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = []
dependencies = [
  "pyjwt~=2.10",
  "pytest~=8.4",
  "pytest-asyncio~=0.26",
  "opentelemetry-distro~=0.59b0",
  "openai~=2.25.0",
  "meshagent-api==0.39.5",
  "meshagent-agents==0.39.5",
  "meshagent-tools==0.39.5",
  "html-to-markdown~=2.24.3",
]

[project.urls]
Documentation = "https://docs.meshagent.com"
Website = "https://www.meshagent.com"
Source = "https://www.meshagent.com"

[tool.setuptools.packages.find]
include = ["meshagent.*"]

[tool.setuptools.package-data]
"meshagent.openai" = ["py.typed", "*.pyi", "**/*.pyi", "**/*.js"]

[tool.setuptools.dynamic]
version = {attr = "meshagent.openai.version.__version__"}
readme = { file = "README.md", content-type = "text/markdown" }
